# welly-parser

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: README.txt  misc.wy
examples/iterator/: mymod.wy  std.iter.wy  std.lists.wy  std.ops.wy  std.shared_lists.wy
src/: ast.rs  bracket.rs  buffer.rs  enums.rs  error.rs  escape.rs  lexer.rs  lib.rs  loc.rs  main.rs  parse.rs  parser.rs  stmt.rs  stream.rs  tree.rs  util.rs  valid.rs  word.rs
src/ast/: expr.rs  mod.rs  name.rs  pattern.rs  stmt.rs
src/expr/: atom.rs  mod.rs  op.rs  precedence.rs
